# gadvpn1

./: .gitignore  __main__.py  alembic.ini  pyproject.toml
app/bot/filters/: __init__.py  choice_languge_callback_data.py  is_authorized.py  os_callback_data.py
app/bot/filters/callback_data/: __init__.py  choice_language.py  choice_os.py  menu.py  payment.py
app/bot/handlers/: __init__.py
app/bot/handlers/private/: __init__.py  connect.py  payment.py  referral.py  register_user.py  start.py
app/bot/keyboards/: __init__.py  choice_language_keyboard.py  connect.py  connect_keyboards.py  language.py  menu.py  menu_keyboards.py  payment.py
app/bot/messages/: __init__.py  connect.py  language.py  manual.py  payment.py  welcome.py
app/bot/middlewares/: __init__.py  auth_middleware.py  session.py
app/bot/states/: __init__.py  registration.py
app/database/: base.py  models.py
app/database/commands/: __init__.py  create_telegram_referral.py  create_telegram_user.py
app/database/migrations/: env.py
app/database/migrations/versions/: 62b12ac0712c_initial_migration.py  6808852d6fd9_initial.py  8905994d2552_initial_migration.py  e24894d68254_initial_migration.py
app/database/queries/: __init__.py  get_user_by_telegram.py
app/marzban/: __init__.py  client.py  main.py
app/payment/: __init__.py  client.py  config.py
gadvpn/domain/common/entities/: __init__.py  aggregate_root.py
gadvpn/domain/common/events/: event.py
gadvpn/domain/common/exceptions/: __init__.py  app_error.py  domain_error.py
gadvpn/domain/common/value_objects/: __init__.py
(+34 files in other folders)
