[project]
name = "gadvpn"
version = "0.1.0"
description = ""
authors = [
    {name = "aa08d"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uuid6 (>=2025.0.1,<2026.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "adaptix (>=3.0.0b11,<4.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
